--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -340,6 +340,24 @@ a.dotted-link:hover {
   color: #5f6b77;
 }
 
+.video-wrapper {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 aspect ratio */
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+    margin: 20px 0;
+}
+
+.video-wrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+
 /* Work Section */
 .experience .item {
   margin-bottom: 30px;
