--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -358,6 +358,19 @@ a.dotted-link:hover {
     border: 0;
 }
 
+.figure {
+  border: 1px #cccccc solid;
+  padding: 4px;
+  margin: auto;
+}
+
+.figcaption {
+  background-color: black;
+  color: white;
+  font-style: italic;
+  padding: 2px;
+  text-align: center;
+}
 /* Work Section */
 .experience .item {
   margin-bottom: 30px;
