--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -307,7 +307,7 @@ a.dotted-link:hover {
   content: '';
   position: absolute;
   bottom: -5px;
-  border-top: 5px solid #822727;
+  border-top: 5px solid #f5f5f5;
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
 }
